# gnome-pipewire-volume-mixer

./: .gitignore  ARCHITECTURE.md  CLEANUP-SUMMARY.md  IMPLEMENTATION-STATUS.md  Makefile  Makefile.daemon  README-PERFORMANCE.md  README.md  debug-cache.js  eslint.config.js  extension.js  install.sh  jest.config.js  metadata.json  package-lock.json  package.json  run-tests.sh  stylesheet.css  test-ttl.sh
.github/workflows/: build.yml  code-quality.yml  release.yml
__tests__/: backend-integration.test.js  daemonBackend.test.js  dbusBackend.simple.test.js  dbusBackend.test.js  extension.test.js  integration.test.js  ipcClient.simple.test.js  ipcClient.test.js  setup.js  system.test.js  test-utils.js  utils.test.js  volume-control.test.js
__tests__/mocks/: gnome-shell.js
daemon/: .clippy.toml  Cargo.toml  Makefile  README.md  TEST_DOCUMENTATION.md  build.rs  config.example.toml  config.toml.example  dbus-interface.xml  install.sh  pipewire-volume-mixer-daemon.service  run_tests.sh  rustfmt.toml
daemon/benches/: performance.rs
daemon/src/: app_name_detector.rs  cache.rs  config.rs  dbus_service.rs  ipc.rs  lib.rs  main.rs  main_test.rs  pipewire_controller.rs  pipewire_monitor.rs  shared_memory.rs
daemon/tests/: test_cache.rs  test_cache_comprehensive.rs  test_dbus.rs  test_ipc.rs  test_ipc_comprehensive.rs  test_shared_memory.rs  test_shared_memory_comprehensive.rs  test_stress.rs
docs/: README-new-architecture.md  daemon-spec.md  migration-plan.md
scripts/: debug-shm.py  install-daemon.sh  install-hooks.sh  measure-performance.sh
src/: daemonBackend.js  dbusBackend.js  extension.js  ipcClient.js  metadata.json  prefs.js  sharedMemory.js  stylesheet.css  utils.js
systemd/: pipewire-volume-mixer.service
